[package]
name = "ssd1677"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"

[dependencies.embedded-graphics-core]
optional = true
version = "0.4.0"
features = ["defmt"]

[dependencies.defmt]
optional = true
version = "1.0"

[features]
default = ["graphics", "defmt"]
graphics = ["dep:embedded-graphics-core"]
defmt = ["dep:defmt"]
