[package]
edition = "2024"
name = "embedded-graphics-example"
resolver = "3"

[[bin]]
name = "embedded-graphics-example"
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.3"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "stm32u575ri", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
static_cell = "2.1.0"

# Display related dependencies
ssd1677 = { path="../../" }
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
